--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -61,17 +61,17 @@ $gray : #d3d3d3;
     align-items: center;
     flex-basis: 100%;
 
-    img {
-      flex-basis: 100%;
-      height: 400px;
-      object-fit: 100%;
-      &:hover:not([src="null"]) { // Tells the browser: "When hovering and item that doesnt have "src="null" does this...""
-        transform: scale(1.05) rotateZ(2deg);
-      }
-      &[src="null"] {
-        transform: none;
-        box-shadow: none;
-      }
+    li {
+      background-color: lighten(antiquewhite, 4%); // In SCSS lighten lets you change a color
+      color: black;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      border-radius: 5px;
+      transition: all 200ms ease-in-out; // Tells the browser how fast changes should occur (the process of the changes)
+      &:hover {
+       box-shadow: 5px 5px 20px #555; // Gives a shadow to the edge of the box (x, y, spray, color).
+       text-shadow: none;
+     }
     }
   }
   .resultMessage {
